<resources>
    <string name="app_name">note</string>

    <string name="bottom_matter">事项</string>
    <string name="bottom_view">视图</string>
    <string name="bottom_mine">我的</string>
    <string name="change_theme">切换主题</string>
    <string name="add_task">添加任务</string>

    <string name="theme_title">主题换肤</string>
    <string name="theme_edit">编辑</string>
    <string name="theme_wallpaper">墙纸</string>
    <string name="theme_color">纯色</string>

    <string name="mine_add">事项定制</string>
    <string name="mine_data">数据安全</string>
    <string name="mine_theme">主题换肤</string>
    <string name="mine_message">每日沸点</string>
    <string name="mine_advise">意见反馈</string>
    <string name="mine_share">邀请好友</string>
    <string name="mine_setting">我的设置</string>

    <string name="view_day">日</string>
    <string name="view_week">周</string>
    <string name="view_month">月</string>
    <string name="view_tab">切换功能</string>
    <string name="view_state1">congratulation</string>
    <string name="view_state2">unaccomplished</string>
    <string name="view_hello">早上好，我有一只小毛驴…</string>
    <string name="view_model1">生活</string>
    <string name="view_model2">学习</string>
    <string name="view_model3">工作</string>
    <string name="view_model4">娱乐</string>

    <string name="matter_complete">已完成</string>
    <string name="matter_nocomplete">未完成</string>
    <string name="matter_send">请输入待完成事项</string>

    <string name="add_idea">想法</string>
    <string name="add_schedule">日程</string>
    <string name="add_skill">技艺</string>
    <string name="add_day1">今日</string>
    <string name="add_day2">明日</string>
    <string name="add_day3">后日</string>
    <string name="add_day4">无期限</string>
    <string name="add_tips1">准备做什么…</string>
    <string name="add_tips2">记录一个灵感…</string>
    <string name="add_tips3">开始一项技艺(标题)…</string>
    <string name="add_tips4">技艺具体内容…</string>
    <string name="add_cancel">取消</string>
    <string name="add_submit">保存</string>

</resources>