<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_matter">

    <fragment
        android:id="@+id/navigation_matter"
        android:name="com.nlk.note.ui.page.MatterFragment"
        android:label="@string/bottom_matter"
        tools:layout="@layout/fragment_matter">
        <action
            android:id="@+id/action_MatterFragment_to_AddActivity"
            app:destination="@id/a_add_task"
            app:enterAnim="@anim/h_fragment_enter"
            app:exitAnim="@anim/h_fragment_exit"
            app:popEnterAnim="@anim/h_fragment_pop_enter"
            app:popExitAnim="@anim/h_fragment_pop_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_view"
        android:name="com.nlk.note.ui.page.ViewFragment"
        android:label="@string/bottom_view"
        tools:layout="@layout/fragment_view" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.nlk.note.ui.page.MineFragment"
        android:label="@string/bottom_mine"
        tools:layout="@layout/fragment_mine" >
        <action
            android:id="@+id/action_MineFragment_to_ChangeThemeActivity"
            app:destination="@id/a_change_theme"
            app:enterAnim="@anim/h_fragment_enter"
            app:exitAnim="@anim/h_fragment_exit"
            app:popEnterAnim="@anim/h_fragment_pop_enter"
            app:popExitAnim="@anim/h_fragment_pop_exit" />
    </fragment>

    <activity
        android:id="@+id/a_change_theme"
        android:name="com.nlk.note.ui.model.changeTheme.ChangeThemeActivity"
        android:label="@string/change_theme"
        tools:layout="@layout/activity_change_theme" />

    <activity
        android:id="@+id/a_add_task"
        android:name="com.nlk.note.ui.model.addtask.AddActivity"
        android:label="@string/add_task"
        tools:layout="@layout/activity_add"/>

</navigation>