<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="click"
            type="com.nlk.note.ui.page.MineFragment.ClickProxy" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#999999">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_title"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/ivBack"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_edit"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/ivBack"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvTag1"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/theme_wallpaper"
            android:textColor="#89888D"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toStartOf="@id/ivBack"/>

        <TextView
            android:id="@+id/tvTag2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/theme_color"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/bg_theme_tag"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:layout_constraintStart_toEndOf="@id/tvTag1"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTag1"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>